# applyon

./: .gitignore  DEPLOY.md  README.md  install.bat  install.sh  pyproject.toml  requirements.txt  setup.md
.cursor/agents/: backend-reviewer.md  bot-reviewer.md  frontend-reviewer.md
backend/: .env.example  agent_manager.py  alembic.ini  auth.py  bot_runner.py  db.py  main.py  models.py  routes_agent.py  routes_auth.py  routes_config.py  routes_jobs.py  routes_outreaches.py  routes_resumes.py  routes_runs.py  schemas.py
backend/migrations/: env.py  initial_schema.sql
backend/migrations/versions/: 20260317_add_job_pipeline_status_and_links.py  20260317_config_other.py  20260317_create_resumes_table.py  20260317_external_apply_metadata.py  20260317_runs_worker_fields.py  20260318_add_external_page_contexts.py  20260318_outreach_runs_and_events.py
bot/: runAiBot.py
bot/config/: __init__.py  _runtime.py  other.py  outreach.py  personals.py  questions.py  resume.py  search.py  secrets.py  settings.py
bot/modules/: clickers_and_finders.py  helpers.py  open_chrome.py  validator.py  visual_cursor.py
bot/modules/__deprecated__/: resume_generator.py
bot/modules/ai/: deepseekConnections.py  geminiConnections.py  openaiConnections.py  (+1 more)
chrome-extension/: manifest.json  package-lock.json  package.json  tsconfig.json
frontend/: README.md  index.html  package-lock.json  package.json
frontend/src/: App.css  App.tsx  api.ts  index.css  main.tsx
jobcook/: __init__.py  agent.py  checks.py  cli.py  config.py  runner.py  service.py
setup/: setup.sh  windows-setup.bat
(+43 files in other folders)
