[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "jobcook"
version = "0.1.0"
description = "Jobcook - AI job application agent"
requires-python = ">=3.10"
dependencies = [
    "click>=8.0",
    "rich>=13.0",
    "websockets>=12.0",
    "httpx>=0.25",
    # bot dependencies (setuptools provides distutils shim removed in Python 3.12)
    "setuptools>=68",
    "undetected-chromedriver>=3.5.0",
    "pyautogui>=0.9.54",
    "openai",
    "selenium",
    "python-dotenv",
    "requests",
]

[project.scripts]
jobcook = "jobcook.cli:main"

[tool.setuptools.packages.find]
include = ["jobcook*"]
